# correlation-zero-claude-opus-4.7

./: .env.example  .gitignore  QUICKSTART.md  README.md  agent.example.py  agent.py  manifest.example.yaml  manifest.yaml  requirements.txt  runtime.yaml  setup.ps1  setup.sh
.correlation-zero/: version.json
docs/: data_sources_guide.md  faq.md  how_scoring_works.md  platform_contract.md  submission_guide.md  writing_a_good_agent.md  writing_a_good_lens.md
enums/: metrics.yaml
examples/01-minimal/: README.md  agent.py  manifest.yaml
examples/02-custom-functions/: README.md  agent.py  manifest.yaml
examples/02-prediction-only/: README.md  agent.py  manifest.yaml
examples/03-llm-wrapped/: README.md  agent.py  manifest.yaml
examples/04-api-backed/: README.md  agent.py  manifest.yaml
examples/04-data-driven/: README.md  agent.py  manifest.yaml
examples/05-full-featured/: README.md  agent.py  manifest.yaml
schemas/: manifest.schema.json  query_envelope.schema.json  source_ref.schema.json
schemas/response_formats/: brief.schema.json  daily_forecast.schema.json  freeform.schema.json  scenario.schema.json
sdk/: README.md  pyproject.toml  setup.py
sdk/correlation_zero/: __init__.py  agent_base.py  schemas.py  test_harness.py  validator.py
tools/: prepare_submission.ps1  prepare_submission.sh  test_agent.ps1  test_agent.sh  validate_manifest.ps1  validate_manifest.sh
