[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "correlation-zero"
version = "0.1.0"
description = "Reference SDK for Correlation Zero agent authors"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0,<7"
]

[tool.setuptools]
packages = ["correlation_zero"]

